# Linux-OpenGL-template-CMake

./: CMakeLists.txt  README.txt
include/: camera.h  matrix.h  shloader.h  texture.h
include/detail/: array_f.h  array_f.inl
include/gl_stuff/: common_utils.h  element_vertex_buffer.h  element_vertex_buffer.inl  vertex_array.h  vertex_buffer.h  vertex_buffer.inl
include/glad/: glad.h
shaders/: 01.frag  01.vert
src/: camera.cpp  glad.c  main.cpp  matrix.cpp  shloader.cpp  texture.cpp
src/gl_stuff/: common_utils.cpp
